--- a/index.html
+++ b/index.html
@@ -1,67 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Plans</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="styles.css">
+	<title>Plans</title>
 </head>
+
 <body>
-  
-  <header class="header">
-    <div class="header__logo">
-      <!-- Logo content here -->
-      The best for you
-    </div>
-    <nav class="header__nav">
-      <ul>
-        <li class="#" id="">Home</li>
-        <li class="#" id="">Planos</li>
-        <li class="#" id="">Suporte</li>
-        <li class="#" id="">Contato</li>
-      </ul>
-    </nav>
-  </header>
-  
-  <h1 class="main-title">Chose your plan</h1>
+	<header class="header">
+		<div class="header__logo">
+			The best for you
+		</div>
+		<nav class="header__nav">
+			<ul>
+				<li class="#" id=""><a href="#">Home</a></li>
+				<li class="#" id="header__nav--active"><a href="#">Plans</a></li>
+				<li class="#" id=""><a href="#">Support</a></li>
+				<li class="#" id=""><a href="#">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
 
-  <section class="pricing">
+	<h1 class="main-title">Choose your plan</h1>
 
-    <div class="pricing-plan">
-      <h2 class="class-pla__title">Essencial</h2>
-      <p class="class-pla__price"><span>R$ 50.00 </span>/ mês</p>
-      <ul class="pricingplan__features">
-        <li>1 Website</li>
-        <li>10GB de Armazenamento</li>
-        <li>1GB de transferencia</li>
-      </ul>
-      <a href="#" class="pricing-plan__cta" id="">Assine já</a>
-    </div>
+	<section class="pricing">
 
-    <div class="pricing-plan">
-      <h2 class="class-pla__title">Premium</h2>
-      <p class="class-pla__price"><span>R$ 100 </span>/ mês</p>
-      <ul class="pricingplan__features">
-        <li>5 Website</li>
-        <li>30GB de Armazenamento</li>
-        <li>Transferência ilimitada</li>
-        <li>10 horas de suporte mensais</li>
-      </ul>
-      <a href="#" class="pricing-plan__cta" id="">Assine já</a>
-    </div>
+		<div class="pricing-plan">
+			<h2 class="class-pla__title">Essential</h2>
+			<p class="class-pla__price"><span>$ 50.00 </span>/ month</p>
+			<ul class="pricingplan__features">
+				<li>1 Website</li>
+				<li>10GB Storage</li>
+				<li>1GB Transfer</li>
+			</ul>
+			<a href="#" class="pricing-plan__cta" id="">Subscribe now</a>
+		</div>
 
-    <div class="pricing-plan">
-      <h2 class="class-pla__title">Gold</h2>
-      <p class="class-pla__price"><span>R$ 150.00 </span>/ mês</p>
-      <ul class="pricingplan__features">
-        <li>13 Website</li>
-        <li>80GB de Armazenamento</li>
-        <li>Transferência ilimitada</li>
-        <li>30 horas de suporte mensais</li>
-        <li>Email personalizado</li>
-      </ul>
-      <a href="#" class="pricing-plan__cta" id="">Assine já</a>
-    </div>
-  </section>
+		<div class="pricing-plan">
+			<h2 class="class-pla__title">Premium</h2>
+			<p class="class-pla__price"><span>$ 100 </span>/ month</p>
+			<ul class="pricingplan__features">
+				<li>5 Websites</li>
+				<li>30GB Storage</li>
+				<li>Unlimited Transfer</li>
+				<li>10 hours of monthly support</li>
+			</ul>
+			<a href="#" class="pricing-plan__cta" id="">Subscribe now</a>
+		</div>
+
+		<div class="pricing-plan">
+			<h2 class="class-pla__title">Gold</h2>
+			<p class="class-pla__price"><span>$ 150.00 </span>/ month</p>
+			<ul class="pricingplan__features">
+				<li>13 Websites</li>
+				<li>80GB Storage</li>
+				<li>Unlimited Transfer</li>
+				<li>30 hours of monthly support</li>
+				<li>Custom Email</li>
+			</ul>
+			<a href="#" class="pricing-plan__cta" id="">Subscribe now</a>
+		</div>
+
+	</section>
 
 </body>
+
 </html>
